--- a/notebooks/ig_cbp.ipynb
+++ b/notebooks/ig_cbp.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -127,9 +127,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_raw_data: 1986 started\n",
+      "get_raw_data: 1986 finished\n",
+      "get_raw_data: 1987 started\n",
+      "get_raw_data: 1987 finished\n",
+      "get_raw_data: 1988 started\n",
+      "get_raw_data: 1988 finished\n",
+      "get_raw_data: 1989 started\n",
+      "get_raw_data: 1989 finished\n",
+      "get_raw_data: 1990 started\n",
+      "get_raw_data: 1990 finished\n",
+      "get_raw_data: 1991 started\n",
+      "get_raw_data: 1991 finished\n",
+      "get_raw_data: 1992 started\n",
+      "get_raw_data: 1992 finished\n",
+      "get_raw_data: 1993 started\n",
+      "get_raw_data: 1993 finished\n",
+      "get_raw_data: 1994 started\n",
+      "get_raw_data: 1994 finished\n",
+      "get_raw_data: 1995 started\n",
+      "get_raw_data: 1995 finished\n",
+      "get_raw_data: 1996 started\n",
+      "get_raw_data: 1996 finished\n",
+      "get_raw_data: 1997 started\n",
+      "get_raw_data: 1997 finished\n",
+      "get_raw_data: 1998 started\n",
+      "get_raw_data: 1998 finished\n",
+      "get_raw_data: 1999 started\n",
+      "get_raw_data: 1999 finished\n",
+      "get_raw_data: 2000 started\n",
+      "get_raw_data: 2000 finished\n",
+      "get_raw_data: 2001 started\n",
+      "get_raw_data: 2001 finished\n",
+      "get_raw_data: 2002 started\n",
+      "get_raw_data: 2002 finished\n",
+      "get_raw_data: 2003 started\n",
+      "get_raw_data: 2003 finished\n",
+      "get_raw_data: 2004 started\n",
+      "get_raw_data: 2004 finished\n",
+      "get_raw_data: 2005 started\n",
+      "get_raw_data: 2005 finished\n",
+      "get_raw_data: 2006 started\n",
+      "get_raw_data: 2006 finished\n",
+      "get_raw_data: 2007 started\n",
+      "get_raw_data: 2007 finished\n",
+      "get_raw_data: 2008 started\n",
+      "get_raw_data: 2008 finished\n",
+      "get_raw_data: 2009 started\n",
+      "get_raw_data: 2009 finished\n",
+      "get_raw_data: 2010 started\n",
+      "get_raw_data: 2010 finished\n",
+      "get_raw_data: 2011 started\n",
+      "get_raw_data: 2011 finished\n",
+      "get_raw_data: 2012 started\n",
+      "get_raw_data: 2012 finished\n",
+      "get_raw_data: 2013 started\n",
+      "get_raw_data: 2013 finished\n",
+      "get_raw_data: 2014 started\n",
+      "get_raw_data: 2014 finished\n",
+      "get_raw_data: 2015 started\n",
+      "get_raw_data: 2015 finished\n",
+      "get_raw_docs started\n",
+      "get_raw_docs finished\n"
+     ]
+    }
+   ],
    "source": [
     "for y in years:\n",
     "    get_raw_data(y)\n",
@@ -145,9 +214,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp08st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp03st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp10st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp07st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp04st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp00st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp15st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp13st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp02st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp09st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp05st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp14st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp06st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp12st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp94st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp11st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp89st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp88st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp96st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp86st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp91st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp90st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp93st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp92st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp98st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp99st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp87st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp97st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/cbp95st.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/docs/1998-2006.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/docs/2015.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/docs/2007-2009.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/docs/1986-1997.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/docs/2010-2013.txt\n",
+      "Skipping existing item: gs://ig-census-cbp/raw/state/docs/2014.txt\n"
+     ]
+    }
+   ],
    "source": [
     "!gsutil -m cp -r -n raw/* gs://ig-census-cbp/raw/state/"
    ]
@@ -168,21 +279,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'raw/cbpzst.txt'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "path_raw.format(y='z')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Read column lists for all years\n",
@@ -191,7 +310,7 @@
     "all_cols = []\n",
     "for y in years:\n",
     "    y2 = str(y)[2:]\n",
-    "    df = pd.read_csv(path_raw.format(y2=y2), nrows=1)\n",
+    "    df = pd.read_csv(path_raw.format(y=y2), nrows=1)\n",
     "    raw_cols[y] = list(df.columns)\n",
     "    cols[y] = list(df.columns.str.lower())\n",
     "    for c in cols[y]:\n",
@@ -202,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create table where columns that existed in year are marked with 1s, otherwise 0\n",
@@ -270,7 +391,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Eyeball read errors\n",
@@ -281,7 +404,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "state_codes = pd.read_csv('https://www2.census.gov/geo/docs/reference/state.txt', delimiter='|', dtype='object')\n",
@@ -291,7 +416,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "state_nn_to_aa = dict(zip(state_codes.STATE, state_codes.STUSAB))\n",
@@ -401,7 +528,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "query = '''\n",
@@ -425,7 +554,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ig = pd.DataFrame(ig_raw[1:], columns=ig_raw[0])\n",
@@ -489,7 +620,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# what changed over years?\n",
@@ -502,7 +635,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# the only difference was \"Mining\" changed to \"Mining, Quarrying, and Oil and Gas Extraction\" between 2002 and 2007.\n",
@@ -529,7 +664,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cbp = pd.read_pickle('cbp_st_n2_y.gz')\n",
@@ -542,7 +679,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cbp_rows = pd.Series(index=cbp.index)\n",
@@ -557,7 +696,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Range codes should be combined in IG: \"31-33\", \"44-45\", \"48-49\".\n",
@@ -581,7 +722,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Repeat same check: PR and VI states missing in CBP\n",
